--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
 
       <aside class="profile card">
-        <img src="me.jpg" alt="Youssef Osama" class="avatar">
+        <img src="Me.jpg" alt="Youssef Osama" class="avatar">
         <div style="font-weight:800">Youssef Osama</div>
         <div class="meta">Front‑End Developer • React.js</div>
         <div class="skills" style="margin-top:10px">
@@ -289,4 +289,5 @@
 
   </body>
 </html>
+
 
