--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
         </div>
 
         <div style="margin-top:12px">
-          <img src="me.jpg" alt="Youssef" style="width:100%;border-radius:10px;object-fit:cover">
+          <img src="Me.jpg" alt="Youssef" style="width:100%;border-radius:10px;object-fit:cover">
         </div>
       </aside>
     </div>
@@ -289,5 +289,6 @@
 
   </body>
 </html>
+
 
 
