--- a/portfolio.html
+++ b/portfolio.html
@@ -91,7 +91,7 @@
       </div>
 
       <aside class="profile card">
-        <img src="me.jpg" alt="Youssef Osama" class="avatar">
+        <img src="Me.jpg" alt="Youssef Osama" class="avatar">
         <div style="font-weight:800">Youssef Osama</div>
         <div class="meta">Front‑End Developer • React.js</div>
         <div class="skills" style="margin-top:10px">
@@ -225,7 +225,7 @@
         </div>
 
         <div style="margin-top:12px">
-          <img src="me.jpg" alt="Youssef" style="width:100%;border-radius:10px;object-fit:cover">
+          <img src="Me.jpg" alt="Youssef" style="width:100%;border-radius:10px;object-fit:cover">
         </div>
       </aside>
     </div>
@@ -287,4 +287,5 @@
 
   </body>
 </html>
+
 
